k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
        - name: celery-worker
          image: my-app:latest
          imagePullPolicy: Never
          workingDir: /app
          command: ["sh", "-c", "celery -A app.tasks worker --loglevel=info --queues=huge_summarize_queue"]
