k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80          # внутренний порт сервиса
      targetPort: 8000  # порт внутри контейнера
      nodePort: 30007   # внешний порт миникуб
  type: NodePort  # делаем сервис доступным извне
